--- a/plugin.xml
+++ b/plugin.xml
@@ -112,8 +112,8 @@
         <resource-file src="src/android/res/drawable/torch_inactive.xml"
                        target="res/drawable/torch_inactive.xml"/>
 
-
-        <framework src="androidx.core:core:1.6.0" />
+        <framework src="com.android.support:design:28.0.0" />
+        <framework src="com.android.support:support-v4:28.0.0" />
         <framework src="com.google.android.gms:play-services-vision:11.0.1" />
         <framework src="com.google.android.material:material:1.2.0-alpha02" />
             
